# runpod-cloud-music

./: .env.template  CLAUDE.md  README.md  lofi.txt  lofi_prompts.txt  prompts.txt  pyproject.toml
.claude/: settings.local.json
deploy/: check_gpu.py  check_pod.py  deploy_and_monitor.py  deploy_code.py  deploy_to_pod.py  install_dependencies.py  monitor_logs.py  monitor_system.py  run_worker.py  sync_and_run_worker.py  validate_deployment.py  validate_environment.py
docs/: RUNPOD_DEPLOYMENT.md  SPEC.md  TASKS.md
src/: __init__.py  worker.py
utility/: s3_music_downloader.py
