[project]
name = "runpod-cloud-music"
version = "0.1.0"
description = "MusicGen batch processing system for RunPod L40S GPU pods"
authors = [
    { name = "RunPod MusicGen", email = "noreply@example.com" }
]
requires-python = ">=3.8.1"
dependencies = [
    "boto3",
    "torch",
    "transformers", 
    "soundfile",
    "numpy",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.scripts]
musicgen-worker = "src.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# UV-specific configuration
dev-dependencies = [
    "pytest",
    "black", 
    "flake8",
]

# Specify Python version preference for uv
python-preference = "managed"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]